Updated the RCP target to the latest Eclipse 2025-12. Fixed some wrong Browser URLs Fixed some deprecated methods.